--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>dev.jaczerob.tedcalm</groupId>
   <artifactId>tedcalm</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2023.04.16</version>
   <properties>
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
 
@@ -111,7 +111,7 @@
             </goals>
             <configuration>
               <systemPropertyVariables>
-                <native.image.path>${project.build.directory}/${project.build.finalName}</native.image.path>
+                <native.image.path>${project.build.directory}/${project.build.finalName}-${version}</native.image.path>
                 <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                 <maven.home>${maven.home}</maven.home>
               </systemPropertyVariables>
